Possible compatibility problems with earlier versions marked with '*'.

--- (IN PROGRESS)

Utility yaz-iconv is now installed by default along with the man page 
yaz-iconv.1.

Extend configure check for OpenSSL to use pkg-config where available (such
as RedHat 9).

Incorporate patch by Morten Bogeskov which allows a Unix file socket
server to specify uid/gid/mask for socket using the format
 unix:[user=uid,][group=gid,][umask=mask,]file=path
If file= is omitted the existing format is assumed, e.g.
 unix:path
in which case the mask is 0666 (rw for everybody).

Major restructure of YAZ source. All source in libyaz is in src directory.
Programs in client (yaz-client), ztest (yaz-ztest), zoom (zoom programs),
util (utility programs such as ASN.1 compiler, yaz-marcdump). 

Added man page for utility yaz-marcdump (used to be called marcdump).
yaz-marcdump is installed by 'make install'.

Fixed a memory leak in Generic Frontend Server that occurred when decoding
of incoming package failed.

Fixed a potential DOS attack vulnerability in COMSTACK/ODR.

Change prototype of odr_perror: add const to message string.

New function yaz_log_reopen which reopens log file (for log rotate, etc.)

* Blocking parameter for COMSTACK cs_create is now a bit mask rather
than a blocking flag. Bit 0 is set for blocking, reset for non-blocking.
Bit 1 is set if cs_addrstr should avoid DNS lookup; reset for full
DNS lookup. There should not be any compatibility problems with this
assuming that blocking=1 or 0 is used.

Fix bad reference in UNIX comstack in function cs_addrstr.

Fix for compilation on AIX.

The generic front-end server (server/seshigh.c) now supports returning
Init diagnostics to the client in User-information-field, in
accordance with Z35.90 Implementor Agreement 5 (Returning diagnostics
in an InitResponse)

ZOOM-C supports "implementationId" and "implementationVersion" options
to go along with "implementationName".  These allow the user code to